--- a/lessons/models/staging/stg_ecommerce_products.yml
+++ b/lessons/models/staging/stg_ecommerce_products.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg_ecommerce__products
+  - name: stg_ecommerce_products
     description: "Table of products on the online store"
     columns:
       - name: product_id
