--- a/lessons/models/staging/src_ecommerce.yml
+++ b/lessons/models/staging/src_ecommerce.yml
@@ -4,6 +4,11 @@ sources:
   - name: thelook_ecommerce
     database: bigquery-public-data
     tables:
+      - name: events
+        freshness:
+          warn_after: {count: 12, unit: hour}
+          error_after: {count: 24, unit: hour}
+        loaded_at_field: created_at
       - name: inventory_items
       - name: order_items
       - name: orders
