--- a/lessons/models/staging/src_ecommerce.yml
+++ b/lessons/models/staging/src_ecommerce.yml
@@ -6,8 +6,8 @@ sources:
     tables:
       - name: events
         freshness:
-          warn_after: {count: 12, unit: hour}
-          error_after: {count: 24, unit: hour}
+            warn_after: {count: 12, period: hour}
+            error_after: {count: 24, period: hour}
         loaded_at_field: created_at
       - name: inventory_items
       - name: order_items
