--- a/lessons/models/staging/stg_ecommerce_order_items.yml
+++ b/lessons/models/staging/stg_ecommerce_order_items.yml
@@ -3,31 +3,47 @@ version: 2
 models:
   - name: stg_ecommerce_order_items
     description: "Line items from orders"
+    config:
+      contract:
+        enforced: true
     columns:
       - name: order_item_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
           - primary_key:
               severity: error
 
       - name: order_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
           - not_null
           - relationships:
-              to: ref('stg_ecommerce__orders')
+              to: ref('stg_ecommerce_orders')
               field: order_id
 
       - name: user_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
           - not_null
 
       - name: product_id
+        data_type: INTEGER
+        constraints:
+          - type: not_null
         tests:
           - not_null
           - relationships:
-              to: ref('stg_ecommerce__products')
+              to: ref('stg_ecommerce_products')
               field: product_id
 
       - name: item_sale_price
+        data_type: FLOAT64
         description: "How much the item sold for"
         tests:
           - not_null
