Refactor ecommerce models: remove obsolete first order SQL, add last order SQL, and update related configurations

--- a/lessons/dbt_project.yml
+++ b/lessons/dbt_project.yml
@@ -22,6 +22,10 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+# Enable Python features
+dispatch:
+  - macro_namespace: 'dbt'
+    search_order: ['python', 'dbt']
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -42,4 +46,5 @@ models:
 tests:
   lessons:
     +severity: warn
+
 
