--- a/lessons/models/marts/dim_RFM_base.yml
+++ b/lessons/models/marts/dim_RFM_base.yml
@@ -1,8 +1,8 @@
 version: 2
 
 models:
-  - name: dim_orders
-    description: "Table of order level information"
+  - name: dim_RFM_base
+    description: "Table of order level information for RFM analysis"
     columns:
 
     # Columns from stg_ecommerce__orders
@@ -33,7 +33,7 @@ models:
       - name: order_status
         description: "{{ doc('status') }}"
 
-      - name: num_items_ordered
+      - name: frequency
         description: "Number of items in the order"
 
 
@@ -53,7 +53,7 @@ models:
           - dbt_expectations.expect_column_values_to_be_between:
               min_value: 0
 
-      - name: total_profit
+      - name: monetary
         description: "Sum of (item_sale_price - product_cost) for the whole order"
         tests:
           - not_null
@@ -66,3 +66,15 @@ models:
           - not_null
           - dbt_expectations.expect_column_values_to_be_between:
               min_value: 0
+
+      - name: recency
+        description: "The most recent order date for the user"
+
+      - name: first_order_created_at
+        description: "The first order date for the user"
+
+      - name: user_id
+        description: "Unique identifier for a user"
+        tests:
+          - not_null
+
